Adding support for handling large messages on Kafka