@@ -12,12 +12,13 @@ location=${3-Vagrant};
 timezone=${4-America/New_York};
 runas_root=${5-yes};
 opennms_url=${6-http://onmscore.aws.opennms.org:8980/opennms};
-kafka_servers=${7-kafka1.aws.opennms.org:9092,kafka2.aws.opennms.org:9092,kafka3.aws.opennms.org:9092};
-kafka_security_protocol=${8-SASL_PLAINTEXT};
+kafka_servers=${7-kafka1.aws.opennms.org:9092};
+kafka_security_protocol=${8-PLAINTEXT};
 kafka_security_mechanism=${9-PLAIN};
 kafka_security_module=${10-org.apache.kafka.common.security.plain.PlainLoginModule};
 kafka_user_name=${11-opennms}
 kafka_user_password=${12-0p3nNMS};
+kafka_max_message_size=${13-5242880};
 
 # Internal Variables
 java_url="http://download.oracle.com/otn-pub/java/jdk/8u191-b12/2787e4a523244c269598db4e85c51e0c/jdk-8u191-linux-x64.rpm"
@@ -189,6 +190,28 @@ fi
 if [ ! -f "/opt/minion/etc/.git" ]; then
   echo "### Configuring OpenNMS Minion..."
 
+  total_mem_in_mb=$(free -m | awk '/:/ {print $2;exit}')
+  mem_in_mb=$(expr $total_mem_in_mb / 2)
+  if [ "$mem_in_mb" -gt "30720" ]; then
+    mem_in_mb="30720"
+  fi
+
+  sysconfig=/etc/sysconfig/minion
+  sed -r -i '/JAVA_MAX_MEM/s/^# //' $sysconfig
+  sed -i -r "/JAVA_MAX_MEM/s/=.*/=${mem_in_mb}M/" $sysconfig
+
+  sed -r -i '/JAVA_OPTS/i ADDITIONAL_MANAGER_OPTIONS="-d64" \
+ADDITIONAL_MANAGER_OPTIONS="$ADDITIONAL_MANAGER_OPTIONS -Djava.net.preferIPv4Stack=true" \
+ADDITIONAL_MANAGER_OPTIONS="$ADDITIONAL_MANAGER_OPTIONS -XX:+PrintGCTimeStamps -XX:+PrintGCDetails" \
+ADDITIONAL_MANAGER_OPTIONS="$ADDITIONAL_MANAGER_OPTIONS -Xloggc:/opt/minion/data/log/gc.log" \
+ADDITIONAL_MANAGER_OPTIONS="$ADDITIONAL_MANAGER_OPTIONS -XX:+UseGCLogFileRotation" \
+ADDITIONAL_MANAGER_OPTIONS="$ADDITIONAL_MANAGER_OPTIONS -XX:NumberOfGCLogFiles=10" \
+ADDITIONAL_MANAGER_OPTIONS="$ADDITIONAL_MANAGER_OPTIONS -XX:GCLogFileSize=10M" \
+ADDITIONAL_MANAGER_OPTIONS="$ADDITIONAL_MANAGER_OPTIONS -XX:+UseStringDeduplication" \
+ADDITIONAL_MANAGER_OPTIONS="$ADDITIONAL_MANAGER_OPTIONS -XX:+UseG1GC"' $sysconfig
+  sed -r -i "/JAVA_OPTS/s/^# //" $sysconfig
+  sed -i -r "/JAVA_OPTS/s/=.*/=\$ADDITIONAL_MANAGER_OPTIONS/" $sysconfig
+
   cd /opt/minion/etc
   git config --global user.name "$git_user_name"
   git config --global user.email "$git_user_email"
@@ -235,6 +258,17 @@ sasl.jaas.config=$kafka_security_module required username="$kafka_user_name" pas
 EOF
     fi
   done
+
+  cat <<EOF >> org.opennms.core.ipc.rpc.kafka.cfg
+acks=1
+compression.type=gzip
+request.timeout.ms=30000
+# Consumer
+fetch.message.max.bytes=$kafka_max_message_size
+max.partition.fetch.bytes=$kafka_max_message_size
+# Producer
+max.request.size=$kafka_max_message_size
+EOF
 
   cat <<EOF > org.opennms.netmgt.trapd.cfg
 trapd.listen.interface=0.0.0.0
